--- a/html/app/index.html
+++ b/html/app/index.html
@@ -32,7 +32,7 @@
     <link rel="manifest" href="assets/images/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/hamburgers@1.1.3/dist/hamburgers.css" rel="stylesheet">
     <link href="assets/css/style.min.css" rel="stylesheet" type="text/css">
@@ -45,9 +45,61 @@
 <body>
     <!-- Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-10 col-xl-1 text-center">
+                    <h1 class="logo">
+                        <a href="#" title="Dra. Michelle Piekarski">
+                            Dra. Michelle Piekarski
+                        </a>
+                    </h1>
+                </div>
+                <div class="col-2 col-xl-11">
+                    <div class="menu">
+                        <button title="menu" class="nav-button hamburger hamburger--squeeze" type="button">
+                            <span class="hamburger-box">
+                                <span class="hamburger-inner"></span>
+                            </span>
+                        </button>
+                        <nav>
+                            <ul>
+                                <li><a href="#comodidades" title="Comodidades">Comodidades</a></li>
+                                <li><a href="#sobre" title="Sobre">Sobre</a></li>
+                                <li><a href="#tratamentos" title="Tratamentos">Tratamentos</a></li>
+                                <li><a href="#depoimentos" title="Depoimentos">Depoimentos</a></li>
+                                <li><a href="#diferenciais" title="Diferenciais">Diferenciais</a></li>
+                                <li><a href="#duvidas" title="Duvidas">Duvidas</a></li>
+                                <li><a href="#estrutura" title="Estrutura">Estrutura</a></li>
+                                <li>
+                                    <a href="#" class="btn btn-primary">Agende sua consulta</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="container-fluid px-0">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="footer--container">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-xl-12">      
+                    <div class="copyright">
+                        <p>Todos os direitos reservados – Responsável técnico: Dra. Michelle Piekarski | Dermatologista | CRMSP 130749 / RQE 95942</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!--build:js assets/js/main.min.js -->
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/modernizr.min.js"></script>
