--- a/html/app/index.html
+++ b/html/app/index.html
@@ -48,14 +48,14 @@
     <header>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-10 col-xl-1 text-center">
+                <div class="col-9 col-xl-1 text-center">
                     <h1 class="logo">
                         <a href="#" title="Dra. Michelle Piekarski">
                             Dra. Michelle Piekarski
                         </a>
                     </h1>
                 </div>
-                <div class="col-2 col-xl-11">
+                <div class="col-3 col-xl-11">
                     <div class="menu">
                         <button title="menu" class="nav-button hamburger hamburger--squeeze" type="button">
                             <span class="hamburger-box">
@@ -87,14 +87,73 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="footer--container">
-                        
+                        <div class="container">
+                            <div class="row align-items-center">
+                                <div class="col-xl-4">
+                                    <p class="text-uppercase">
+                                        <strong>Agende sua consulta</strong>
+                                    </p>
+                                    <h6 class="h4">Marque um horário com a Dra. Michelle Piekarski</h6>
+                                    <p>Garanta seu atendimento personalizado com a Dra. Michelle e inicie sua jornada de cuidado e bem-estar.</p>
+                                    <p>
+                                        <a href="#" class="btn btn-primary text-uppercase">Marcar consulta</a>
+                                    </p>
+                                </div>
+                                <div class="col-xl-4">
+                                    <dl>
+                                        <dt><i class="fa fa-2x fa-map-marker" aria-hidden="true"></i></dt>
+                                        <dd>
+                                            Rua Adolfo Bastos, 598<br />
+                                            Sala 124 Vila Bastos, Santo André - SP<br />
+                                            CEP: 09041-000
+                                        </dd>
+                                    </dl>
+                                    <dl>
+                                        <dt><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></dt>
+                                        <dd><a href="mailto:dramichellepiekarski@gmail.com">dramichellepiekarski@gmail.com</a></dd>
+                                    </dl>
+                                    <dl>
+                                        <dt><i class="fa fa-2x fa-phone" aria-hidden="true"></i></dt>
+                                        <dd><a href="tel:+5511934500356">(11) 93450-0356</a></dd>
+                                    </dl>
+                                    <dl>
+                                        <dt><i class="fa fa-2x fa-clock-o" aria-hidden="true"></i></dt>
+                                        <dd>
+                                            Segunda a Sexta, das 08hrs até as 18hrs<br />
+                                            Sábados, das 08hrs até as 12hrs
+                                        </dd>
+                                    </dl>
+                                </div>
+                                <div class="col-xl-4">                                    
+                                    <nav>
+                                        <p>
+                                            <strong>Menu</strong>
+                                        </p>
+                                        <ul>
+                                            <li><a href="#comodidades" title="Comodidades">Comodidades</a></li>
+                                            <li><a href="#sobre" title="Sobre">Sobre</a></li>
+                                            <li><a href="#tratamentos" title="Tratamentos">Tratamentos</a></li>
+                                            <li><a href="#depoimentos" title="Depoimentos">Depoimentos</a></li>
+                                            <li><a href="#diferenciais" title="Diferenciais">Diferenciais</a></li>
+                                            <li><a href="#duvidas" title="Duvidas">Duvidas</a></li>
+                                            <li><a href="#estrutura" title="Estrutura">Estrutura</a></li>
+                                        </ul>
+                                    </nav>
+                                    <ul class="soclal-list">
+                                        <li><a href="#" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                        <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                        <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row align-items-center">
                 <div class="col-xl-12">      
                     <div class="copyright">
-                        <p>Todos os direitos reservados – Responsável técnico: Dra. Michelle Piekarski | Dermatologista | CRMSP 130749 / RQE 95942</p>
+                        <p>Todos os direitos reservados - Responsável técnico: Dra. Michelle Piekarski | Dermatologista | CRMSP 130749 / RQE 95942</p>
                     </div>
                 </div>
             </div>
