--- a/html/app/index.html
+++ b/html/app/index.html
@@ -81,7 +81,17 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section id="map">
+            <div class="container-fluid px-0">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <iframe class="mb-n2" width="100%" height="450" style="border:0" load="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJcR5ncwJDzpQRr-hLCkwp9wg&key=AIzaSyBuoiClAIYm5qT2Bamc8RfFnc-fFbkl-nA"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="container-fluid px-0">
             <div class="row">
