--- a/html/app/index.html
+++ b/html/app/index.html
@@ -64,7 +64,7 @@
                         </button>
                         <nav>
                             <ul>
-                                <li><a href="#comodidades" title="Comodidades">Comodidades</a></li>
+                                <li><a href="#dificudades" title="Dificudades">Dificudades</a></li>
                                 <li><a href="#sobre" title="Sobre">Sobre</a></li>
                                 <li><a href="#tratamentos" title="Tratamentos">Tratamentos</a></li>
                                 <li><a href="#depoimentos" title="Depoimentos">Depoimentos</a></li>
@@ -82,6 +82,211 @@
         </div>
     </header>
     <main>
+        <section id="dificudades" class="bg-color-light p-5">
+            <div class="container">
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center text-color-primary">
+                        <h2 class="h6">
+                            <span>Dificuldades</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center">
+                        <h3 class="h4">Em algum momento você já:</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 my-4 text-center">
+                        <div class="row">
+                            <div class="col-xl-12">
+                                <img src="./assets/images/icn-comodidades-01.png" alt="">
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-xl-12">
+                                <p>
+                                    <strong>Consultas Apressadas</strong>
+                                </p>
+                                <p>Sentiu que não teve tempo suficiente?</p>
+                                <p>Ficou com dúvidas sobre sua condição?</p>
+                                <p>Sua opção de tratamento foi discutida de forma apressada?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="diferenciais" class="bg-color-secondary text-color-light p-5">
+            <div class="container">
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center text-color-light">
+                        <h2 class="h6">
+                            <span>Diferenciais</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-xl-12 text-center">
+                        <h3 class="h4">Como funciona a consulta:</h3>
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="col-xl-9 center-block text-center">
+                        <p>A chave para um tratamento bem-sucedido está na combinação de uma consulta detalhada, um diagnóstico preciso e uma abordagem que valoriza tanto a saúde quanto o bem-estar emocional do paciente.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-6 my-4">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <img src="./assets/images/img-diferenciais-01.png" alt="">
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    <strong>Cuidado Integral</strong>
+                                </p>
+                                <p>
+                                    Em cada consulta, ofereço uma avaliação minuciosa e personalizada, garantindo que todos os aspectos de sua saúde sejam cuidadosamente considerados.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 my-4">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <img src="./assets/images/img-diferenciais-01.png" alt="">
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    <strong>Cuidado Integral</strong>
+                                </p>
+                                <p>
+                                    Em cada consulta, ofereço uma avaliação minuciosa e personalizada, garantindo que todos os aspectos de sua saúde sejam cuidadosamente considerados.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-6 my-4">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <img src="./assets/images/img-diferenciais-01.png" alt="">
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    <strong>Cuidado Integral</strong>
+                                </p>
+                                <p>
+                                    Em cada consulta, ofereço uma avaliação minuciosa e personalizada, garantindo que todos os aspectos de sua saúde sejam cuidadosamente considerados.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 my-4">
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <img src="./assets/images/img-diferenciais-01.png" alt="">
+                            </div>
+                            <div class="col-md-6">
+                                <p>
+                                    <strong>Cuidado Integral</strong>
+                                </p>
+                                <p>
+                                    Em cada consulta, ofereço uma avaliação minuciosa e personalizada, garantindo que todos os aspectos de sua saúde sejam cuidadosamente considerados.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="map">
             <div class="container-fluid px-0">
                 <div class="row">
@@ -140,7 +345,7 @@
                                             <strong>Menu</strong>
                                         </p>
                                         <ul>
-                                            <li><a href="#comodidades" title="Comodidades">Comodidades</a></li>
+                                            <li><a href="#dificudades" title="Dificudades">Dificudades</a></li>
                                             <li><a href="#sobre" title="Sobre">Sobre</a></li>
                                             <li><a href="#tratamentos" title="Tratamentos">Tratamentos</a></li>
                                             <li><a href="#depoimentos" title="Depoimentos">Depoimentos</a></li>
