fix: mobile issues

--- a/html/app/index.html
+++ b/html/app/index.html
@@ -86,7 +86,7 @@
             <div class="jumbotron">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-md-6 col-8">
                             <h1 class="h2">Dermatologista especializada em tratamentos de pele, cabelos e unhas</h1>
                             <p class="lead">Saúde exclusiva ao seu alcance: A escuta ativa e o acolhimento que você precisa para receber um diagnóstico preciso. Não se contente com menos quando se trata da sua saúde</p>
                             <p>
@@ -250,31 +250,31 @@
                     <div class="col-xl-10 center-block">
                         <ul class="d-flex tratamentos--slide">
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-01.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-01.png" alt="">
                                 <p><strong>Acnes e Espinhas</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-02.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-02.png" alt="">
                                 <p><strong>Cabelo</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-03.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-03.png" alt="">
                                 <p><strong>Manchas e Melasma</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-04.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-04.png" alt="">
                                 <p><strong>Alergias</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-05.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-05.png" alt="">
                                 <p><strong>Dermatites</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-06.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-06.png" alt="">
                                 <p><strong>Micoses</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-tratamentos-06.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tratamentos-06.png" alt="">
                                 <p><strong>Micoses</strong></p>
                             </li>
                         </ul>
@@ -289,23 +289,23 @@
                     <div class="col-xl-10 center-block">
                         <ul class="d-flex procedimentos--slide">
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-procedimentos-01.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-procedimentos-01.png" alt="">
                                 <p><strong>Consultas Física</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-procedimentos-02.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-procedimentos-02.png" alt="">
                                 <p><strong>Consultas Online</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-procedimentos-03.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-procedimentos-03.png" alt="">
                                 <p><strong>Microagulhamentos</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-procedimentos-04.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-procedimentos-04.png" alt="">
                                 <p><strong>Peelings</strong></p>
                             </li>
                             <li class="text-center">
-                                <img class="center-block" src="./assets/images/img-procedimentos-04.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-procedimentos-04.png" alt="">
                                 <p><strong>Peelings</strong></p>
                             </li>
                         </ul>
@@ -320,7 +320,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img class="center-block" src="./assets/images/img-tecnologias-01.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tecnologias-01.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p>
@@ -333,7 +333,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img class="center-block" src="./assets/images/img-tecnologias-02.png" alt="">
+                                <img class="img-fluid center-block" src="./assets/images/img-tecnologias-02.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p><strong>Dermatoscópio - Precisão na Palma da Sua Mão</strong></p>
@@ -496,7 +496,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="./assets/images/img-diferenciais-01.png" alt="">
+                                <img class="img-fluid" src="./assets/images/img-diferenciais-01.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p>
@@ -511,7 +511,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="./assets/images/img-diferenciais-02.png" alt="">
+                                <img class="img-fluid" src="./assets/images/img-diferenciais-02.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p>
@@ -528,7 +528,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="./assets/images/img-diferenciais-03.png" alt="">
+                                <img class="img-fluid" src="./assets/images/img-diferenciais-03.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p>
@@ -543,7 +543,7 @@
                     <div class="col-xl-6 my-4">
                         <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="./assets/images/img-diferenciais-04.png" alt="">
+                                <img class="img-fluid" src="./assets/images/img-diferenciais-04.png" alt="">
                             </div>
                             <div class="col-md-6">
                                 <p>
