--- a/html/app/index.html
+++ b/html/app/index.html
@@ -2,17 +2,24 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Dra. Michelle Piekarski | Dermatologista | Santo André</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="" />
+    <meta name="description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!" />
 
-    <meta property="og:title" content="">
-    <meta property="og:site_name" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="assets/images/img-social.png">
-    <meta name="twitter:card" content="assets/images/img-social.png">
+    <!-- Facebook Card data -->
+    <meta property="og:title" content="Dra. Michelle Piekarski | Dermatologista | Santo André">
+    <meta property="og:site_name" content="Dra. Michelle Piekarski">
+    <meta property="og:description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!">
+    <meta property="og:image" content="./assets/img/img-social.png">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:image" content="./assets/img/img-social.png">
+    <meta name="twitter:site" content="https://dramichellepiekarski.com.br/">
+    <meta name="twitter:title" content="Dra. Michelle Piekarski">
+    <meta name="twitter:description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!">
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
