--- a/html/app/index.html
+++ b/html/app/index.html
@@ -89,7 +89,7 @@
         </div>
     </header>
     <main>
-        <section id="destaque">
+        <section id="destaque" class="p-0">
             <div class="jumbotron">
                 <div class="container">
                     <div class="row align-items-center">
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </section>
-        <section id="dificudades" class="bg-color-light p-5">
+        <section id="dificudades" class="bg-color-light">
             <div class="container">
                 <div class="row my-4">
                     <div class="col-xl-12 text-center text-color-primary">
@@ -226,7 +226,52 @@
                 </div>
             </div>
         </section>
-        <section id="tratamentos" class="bg-color-primary text-color-light p-5">
+        <section id="sobre" class="bg-color-light">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6">
+                        <img class="img-fluid" src="./assets/images/img-sobre.png" alt="">
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="row my-4">
+                            <div class="col-xl-12 text-color-primary">
+                                <h2 class="h6">
+                                    <span>Sobre</span>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="row my-4">
+                            <div class="col-xl-12">
+                                <h3 class="h4 text-uppercase">Dra. Michelle Piekarski</h3>
+                            </div>
+                        </div>
+                        <div class="row my-4">
+                            <div class="col-xl-12">
+                                <p class="h5">CRM SP 130749 / RQE 95942</p>
+                            </div>
+                        </div>
+                        <div class="row my-4">
+                            <div class="col-xl-12">
+                                <p>Cuidar de você é a minha maior motivação como pessoa e profissional.</p>
+                                <p>Sempre quis ser médica. Após vencer muitos desafios entrei na Universidade de Cienfuegos em Cuba e a dermatologia me encontrou.</p>
+                                <p>Muito além da faculdade de medicina, busquei pós-graduações e especializações em Dermatologia, a qual tive a oportunidade de fazer, de onde trouxe a excelência e o acolhimento da medicina humanizada para os meus atendimentos clínicos.</p>
+                                <p>Hoje sou membro da <strong>Sociedade Brasileira de Dermatologia - SBD</strong> e tenho o extremo cuidado de manter a ética e o respeito com cada paciente.</p>
+                                <p>Cada paciente, cada diagnóstico é muito importante pra mim, pois é o momento em que exerço o meu propósito de vida, trazendo saúde, acolhimento, respeito, e escuta ativa a todos os pacientes, independente da classe social.</p>
+                                <p>A minha atuação dermatológica e a maior parte dos tratamentos bem sucedidos só reafirmam a minha crença de que nem tudo é cirurgia. Antes de uma intervenção cirúrgica há de se ter uma escuta e uma análise integral da saúde de cada paciente.</p>
+                                <p>E, para isso, nada melhor do que fazer este atendimento com <strong>Acolhimento</strong>, <strong>Escuta Ativa</strong> e o melhor da <strong>Ciência Médica</strong>.</p>
+                                <p>Agende a sua consulta e descubra os melhores tratamentos dermatológicos para manter a saúde da sua pele, cabelos e unhas.</p>
+                                <p>
+                                    <a href="#" class="btn btn-primary text-uppercase">
+                                        Quero agendar minha consulta
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="tratamentos" class="bg-color-primary text-color-light">
             <div class="container">
                 <div class="row my-4">
                     <div class="col-xl-12 text-center text-color-light">
@@ -358,7 +403,7 @@
                 </div>
             </div>
         </section>
-        <section id="depoimentos" class="bg-color-light p-5">
+        <section id="depoimentos" class="bg-color-light">
             <div class="container">
                 <div class="row my-4">
                     <div class="col-xl-12 text-center text-color-primary">
@@ -381,7 +426,7 @@
                     <div class="col-xl-12">
                         <ul class="depoimentos--box d-flex">
                             <li>
-                                <div class="bg-color-light col-11 py-3 mb-2">
+                                <div class="bg-color-light col-11 py-3 mb-2 mx-2">
                                     <div class="d-flex">
                                         <div class="pr-2 pt-0 pb-2">
                                             <img src="https://placehold.co/40" alt="">
@@ -400,7 +445,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="bg-color-light col-11 py-3 mb-2">
+                                <div class="bg-color-light col-11 py-3 mb-2 mx-2">
                                     <div class="d-flex">
                                         <div class="pr-2 pt-0 pb-2">
                                             <img src="https://placehold.co/40" alt="">
@@ -419,7 +464,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="bg-color-light col-11 py-3 mb-2">
+                                <div class="bg-color-light col-11 py-3 mb-2 mx-2">
                                     <div class="d-flex">
                                         <div class="pr-2 pt-0 pb-2">
                                             <img src="https://placehold.co/40" alt="">
@@ -438,7 +483,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="bg-color-light col-11 py-3 mb-2">
+                                <div class="bg-color-light col-11 py-3 mb-2 mx-2">
                                     <div class="d-flex">
                                         <div class="pr-2 pt-0 pb-2">
                                             <img src="https://placehold.co/40" alt="">
@@ -457,7 +502,7 @@
                                 </div>
                             </li>
                             <li>
-                                <div class="bg-color-light col-11 py-3 mb-2">
+                                <div class="bg-color-light col-11 py-3 mb-2 mx-2">
                                     <div class="d-flex">
                                         <div class="pr-2 pt-0 pb-2">
                                             <img src="https://placehold.co/40" alt="">
@@ -480,7 +525,7 @@
                 </div>
             </div>
         </section>
-        <section id="diferenciais" class="bg-color-secondary text-color-light p-5">
+        <section id="diferenciais" class="bg-color-secondary text-color-light">
             <div class="container">
                 <div class="row my-4">
                     <div class="col-xl-12 text-center text-color-light">
@@ -565,7 +610,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-color-primary text-color-light p-5">
+        <section class="bg-color-primary text-color-light">
             <div class="container">
                 <div class="row my-4">
                     <div class="col-xl-12 text-center text-color-light">
@@ -598,7 +643,7 @@
                 </div>
             </div>
         </section>
-        <section id="map">
+        <section id="map" class="p-0">
             <div class="container-fluid px-0">
                 <div class="row">
                     <div class="col-xl-12">
