--- a/html/app/index.html
+++ b/html/app/index.html
@@ -643,6 +643,62 @@
                 </div>
             </div>
         </section>
+        <section id="estrutura" class="bg-color-light">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-xl-6 order-2 order-xl-1">
+                        <div class="row my-4">
+                            <div class="col-xl-12 text-color-primary">
+                                <h2 class="h6">
+                                    <span>Estrutura</span>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="row my-4">
+                            <div class="col-xl-12">
+                                <h3 class="h4 text-uppercase">Clínica localizada na região do centro de Santo André.</h3>
+                            </div>
+                        </div>
+                        <div class="row my-4">
+                            <div class="col-xl-12">
+                                <p>A Clínica Dermatológica da Dra. Michelle proporciona tratamentos sob medida, utilizando tecnologias avançadas e seguras, juntamente com uma equipe de especialistas renomados por seu vasto conhecimento científico e excepcional habilidade no cuidado com os pacientes.</p>
+                                <p>Estamos dedicados a prestar serviços com alta qualidade, mantendo os princípios de ética e integridade.</p>
+                                <p><strong><u class="text-color-primary">Localização</u></strong></p>
+                                <p>
+                                    Rua Adolfo Bastos, 598 - Sala 124<br />
+                                    Vila Bastos, Santo André - SP<br />
+                                    CEP: 09041-000
+                                </p>
+                                <p><strong><u class="text-color-primary">Pontos de referência:</u></strong></p>
+                                <p>Edifício Attillato Empresarial</p>
+                                <p>
+                                    <a href="#" class="btn btn-secondary text-uppercase">
+                                        Agende sua consulta
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 order-1 order-xl-2">
+                        <div class="row">
+                            <div class="col-xl-10 center-block">
+                                <ul class="estrutura--slider d-flex">
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-01.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-02.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-03.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-04.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-05.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-06.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-07.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-08.png" alt=""></li>
+                                    <li><img class="img-fluid" src="./assets/images/img-estrutura-09.png" alt=""></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="map" class="p-0">
             <div class="container-fluid px-0">
                 <div class="row">
