feat: adding faq section

--- a/html/app/index.html
+++ b/html/app/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Dra. Michelle Piekarski | Dermatologista | Santo André">
     <meta property="og:site_name" content="Dra. Michelle Piekarski">
     <meta property="og:description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!">
-    <meta property="og:image" content="./assets/img/img-social.png">
+    <meta property="og:image" content="https://dev.joekyy.com.br/michelle-piekarski/assets/img/img-social.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:image" content="./assets/img/img-social.png">
+    <meta name="twitter:image" content="https://dev.joekyy.com.br/michelle-piekarski/assets/img/img-social.png">
     <meta name="twitter:site" content="https://dramichellepiekarski.com.br/">
     <meta name="twitter:title" content="Dra. Michelle Piekarski">
     <meta name="twitter:description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!">
@@ -606,6 +606,100 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="duvidas" class="bg-color-light">
+            <div class="container">
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center text-color-primary">
+                        <h2 class="h6">
+                            <span>Duvidas</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center">
+                        <h3 class="h4">Informações Úteis: Perguntas e Respostas</h3>
+                    </div>
+                </div>
+                <div class="row my-4">
+                    <div class="col-xl-12 text-center">
+                        <p>Confira as respostas para as perguntas mais frequentes sobre nossos serviços e cuidados. </p>
+                        <p>Caso sua dúvida não esteja aqui, entre em contato.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>A consulta tem direito a retorno?</summary>
+                            <p>Você terá direito a um retorno gratuito em 30 dias. Provável que volte com os exames e a Dra. vai te explicar o tratamento adequado e as datas de acompanhamento. No entanto, esse retorno pode ser usado para outras situações como: reações alérgicas a tratamentos paliativos em situações de crises ou demais esclarecimentos solicitados pelo paciente.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>Como funciona a consulta?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>Como funciona a garantia de retorno?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>Qual o tempo de duração da consulta com a Dra. Michelle?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>A Dra. Michelle Piekarski emite notas para reembolso médico?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>A Dra Michelle faz consulta online?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>Quais formas de pagamentos vocês aceitam?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>O valor pode ser parcelado?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <details>
+                            <summary>E se eu desistir da consulta?</summary>
+                            <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Mé faiz elementum girarzis, nisi eros vermeio. Suco de cevadiss deixa as pessoas mais interessantis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.</p>
+                        </details>
                     </div>
                 </div>
             </div>
