fix: social issues

--- a/html/app/index.html
+++ b/html/app/index.html
@@ -11,6 +11,8 @@
     <!-- Facebook Card data -->
     <meta property="og:title" content="Dra. Michelle Piekarski | Dermatologista | Santo André">
     <meta property="og:site_name" content="Dra. Michelle Piekarski">
+    <meta property="og:url" content="https://dramichellepiekarski.com.br/">
+    <meta property="og:type" content="doctor">
     <meta property="og:description" content="Cuide de sua pele, cabelos e unhas! Atendemos crianças, adultos e idosos, presencial - Santo Andre, ABC e Online - Brasil e exterior. Agende sua consulta agora!">
     <meta property="og:image" content="https://dev.joekyy.com.br/michelle-piekarski/assets/images/img-social.png">
 
